@@ -55,9 +55,22 @@ REQUIRES_RE = re.compile(r'''
         (?P<operator><=?|>=?|==|!=)
         \s*
         (?P<version>(\w|[-.])+)
+        (?:  # optional interval minimum/maximum version
+            \s*
+            ,
+            \s*
+            (?P<operator2><=?|>=?|==|!=)
+            \s*
+            (?P<version2>(\w|[-.])+)
+        )?
     )?
     \)?  # optional closing parenthesis
     ''', re.VERBOSE)
+DEB_VERS_OPS = {
+    '==': '=',
+    '<':  '<<',
+    '>':  '>>',
+}
 
 
 def validate(fpath):
@@ -152,9 +165,23 @@ def guess_dependency(impl, req, version=None, bdep=None,
                 # Debian dependency
                 return item['dependency']
             if req_d['version'] and (item['standard'] or item['rules']) and\
-                    req_d['operator'] not in (None, '==', '!='):
+                    req_d['operator'] not in (None, '!='):
+                o = _translate_op(req_d['operator'])
                 v = _translate(req_d['version'], item['rules'], item['standard'])
-                return "%s (%s %s)" % (item['dependency'], req_d['operator'], v)
+                d = "%s (%s %s)" % (item['dependency'], o, v)
+                if req_d['version2'] and req_d['operator2'] not in (None,'!='):
+                    o2 = _translate_op(req_d['operator2'])
+                    v2 = _translate(req_d['version2'], item['rules'], item['standard'])
+                    d += ", %s (%s %s)" % (item['dependency'], o2, v2)
+                return d
+            elif accept_upstream_versions and req_d['version'] and \
+                    req_d['operator'] not in (None,'!='):
+                o = _translate_op(req_d['operator'])
+                d = "%s (%s %s)" % (item['dependency'], o, req_d['version'])
+                if req_d['version2'] and req_d['operator2'] not in (None,'!='):
+                    o2 = _translate_op(req_d['operator2'])
+                    d += ", %s (%s %s)" % (item['dependency'], o2, req_d['version2'])
+                return d
             else:
                 if item['dependency'] in bdep:
                     if None in bdep[item['dependency']] and bdep[item['dependency']][None]:
@@ -313,3 +340,16 @@ def _translate(version, rules, standard):
     if standard == 'PEP386':
         version = PRE_VER_RE.sub(r'~\g<1>', version)
     return version
+
+
+def _translate_op(operator):
+    """Translate Python version operator into Debian one.
+
+    >>> _translate_op('==')
+    '='
+    >>> _translate_op('<')
+    '<<'
+    >>> _translate_op('<=')
+    '<='
+    """
+    return DEB_VERS_OPS.get(operator, operator)
